--- a/Views/dashboard.pug
+++ b/Views/dashboard.pug
@@ -66,7 +66,7 @@ html(lang="es")
       .btn-ayuda { background-color: #E184B9; color: #762051; }
 
   body
-    h1 Dashboard - Huellitas Felices
+    h1 PET SHOP- Huellitas Felices
 
     .container
       .row.justify-content-center
