--- a/Views/login.pug
+++ b/Views/login.pug
@@ -16,7 +16,7 @@ html(lang="es")
     style.
       body {
         font-family: 'Poppins', sans-serif;
-        background-color: #F0EDE7;
+        background-color: #5E0F3C;
       }
       .btn-custom {
         background-color: #9A4475;
