View Carpeta Modulo Productos - dashboard, editar, eliminar

--- a/Views/dashboard.pug
+++ b/Views/dashboard.pug
@@ -3,7 +3,7 @@ html(lang="es")
   head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    title Dashboard - Huellitas Felices
+    title PET SHOP INTEGRAL - Huellitas Felices
 
     // Google Fonts
     link(rel="preconnect" href="https://fonts.googleapis.com")
@@ -113,7 +113,7 @@ html(lang="es")
             img(src="/images/icono-mascotas.png" alt="Mascotas" style="width:90px; margin-bottom:0px;")
             | MASCOTAS
         .col-md-4.d-flex.justify-content-center
-          a.dashboard-btn(href="/productos")
+          a.dashboard-btn(href="/productos/dashboard")
             img(src="/images/icono-productos.png" alt="Productos" style="width:90px; margin-bottom:0px;")
             | PRODUCTOS
 
