Interfaz Listado de productos

--- a/Views/dashboard.pug
+++ b/Views/dashboard.pug
@@ -92,6 +92,7 @@ html(lang="es")
         color: #fff;
         text-align: center;
         padding: 15px;
+        height: 45px;
       }
 
   body
