Plantilla Pug Modulo Clientes - Arreglo

--- a/Views/clientes/clientes.pug
+++ b/Views/clientes/clientes.pug
@@ -27,7 +27,7 @@ html(lang="es")
         flex-direction: column;
         min-height: 100vh;
       }
-      main { flex: 1; padding: 20px 0; }
+      main { flex: 1; padding: 20px; }
 
       .dashboard-header {
         width: 100%;
@@ -44,15 +44,10 @@ html(lang="es")
       table { background-color: #fff; }
       th, td { text-align: center; vertical-align: middle; }
 
-      .btn-nuevo {
-        background-color: #762051;
-        border-color: #762051;
-        color: #fff;
-      }
+      .btn-nuevo { background-color: #762051; border-color: #762051; color: #fff; }
       .btn-acciones.editar { background-color: #E49AC3; border-color: #E49AC3; }
       .btn-acciones.eliminar { background-color: #9A4475; border-color: #9A4475; }
-
-      .btn-acciones { margin: 5px 5px; color: #fff; }
+      .btn-acciones { margin: 5px; color: #fff; }
       .btn-acciones:hover { opacity: 0.85; }
 
       footer {
@@ -106,3 +101,4 @@ html(lang="es")
       | Todos los derechos reservados © 2025 Huellitas Felices
 
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js")
+
