Creacion Modulo Mascotas - Modelo

--- a/Views/index.pug
+++ b/Views/index.pug
@@ -43,7 +43,7 @@ html(lang="es")
         color: #FFF;
         padding: 10px;
         text-align: center;
-        z-index: 10; /* para que quede arriba de otros elementos */
+        z-index: 10; 
       }
 
   body
