--- a/Views/dashboard.pug
+++ b/Views/dashboard.pug
@@ -3,7 +3,7 @@ html(lang="es")
   head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    title PET SHOP INTEGRAL - Huellitas Felices
+    title PET SHOP - Huellitas Felices
 
     // Google Fonts
     link(rel="preconnect" href="https://fonts.googleapis.com")
@@ -37,7 +37,7 @@ html(lang="es")
         height: 180px;
         margin-top: 10px;
         margin: 10px;
-        font-size: 1.4rem; /* más grande */
+        font-size: 1.4rem;
         font-weight: 600;
         color: #fff;
         border-radius: 15px;
