--- a/Views/productos/dashboard.pug
+++ b/Views/productos/dashboard.pug
@@ -3,7 +3,7 @@ html(lang="es")
   head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    title Dashboard Productos - Huellitas Felices
+    title Productos - Huellitas Felices
 
     // Google Fonts
     link(rel="preconnect" href="https://fonts.googleapis.com")
