--- a/Views/productos/editar.pug
+++ b/Views/productos/editar.pug
@@ -3,7 +3,7 @@ html(lang="es")
   head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    title Editar Producto - Huellitas Felices
+    title Producto - Huellitas Felices
 
     link(rel="preconnect" href="https://fonts.googleapis.com")
     link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
