--- a/frontend/views/layouts/main.pug
+++ b/frontend/views/layouts/main.pug
@@ -11,6 +11,7 @@ html(lang="es")
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css")
     // CSS PERSONALIZADO
     link(rel="stylesheet", href="/css/styles.css")
+    block extraCSS
 
   body.bg-light
     // HEADER
@@ -28,5 +29,7 @@ html(lang="es")
 
     // BOOTSTRAP 5 JS
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js")
+    // SCRIPTS PERSONALIZADOS
+    block extraJS
     // SCRIPTS PERSONALIZADOS
     block scripts
