Modificacion Botones en PPAL para conexion con modulos de Servicios

--- a/Views/dashboard.pug
+++ b/Views/dashboard.pug
@@ -138,13 +138,13 @@ html(lang="es")
             img(src="/images/icono-agenda.png" alt="Agenda" style="width:80px; margin-bottom:0px;")
             | AGENDA
         .col-md-4.d-flex.justify-content-center
-          a.dashboard-btn(href="/config")
-            img(src="/images/icono-config.png" alt="Configuración" style="width:80px; margin-bottom:0px;")
-            | CONFIGURACIÓN
+          a.dashboard-btn(href="/empleados")
+            img(src="/images/icono-config.png" alt="Empleados" style="width:80px; margin-bottom:0px;")
+            | EMPLEADOS
         .col-md-4.d-flex.justify-content-center
-          a.dashboard-btn(href="/ayuda")
-            img(src="/images/icono-ayuda.png" alt="Ayuda" style="width:80px; margin-bottom:0px;")
-            | AYUDA
+          a.dashboard-btn(href="/servicios")
+            img(src="/images/icono-ayuda.png" alt="Servicios" style="width:80px; margin-bottom:0px;")
+            | SERVICIOS
 
     footer
       | Todos los derechos reservados © 2025 Huellitas Felices
