Modificacion Botones e Iconos en PPAL para conexion con modulos de Servicios

--- a/Views/dashboard.pug
+++ b/Views/dashboard.pug
@@ -139,11 +139,11 @@ html(lang="es")
             | AGENDA
         .col-md-4.d-flex.justify-content-center
           a.dashboard-btn(href="/empleados")
-            img(src="/images/icono-config.png" alt="Empleados" style="width:80px; margin-bottom:0px;")
+            img(src="/images/icono-empleados.png" alt="Empleados" style="width:80px; margin-bottom:0px;")
             | EMPLEADOS
         .col-md-4.d-flex.justify-content-center
           a.dashboard-btn(href="/servicios")
-            img(src="/images/icono-ayuda.png" alt="Servicios" style="width:80px; margin-bottom:0px;")
+            img(src="/images/icono-servicios.png" alt="Servicios" style="width:80px; margin-bottom:0px;")
             | SERVICIOS
 
     footer
